--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "plugin": [
+  "plugins": [
     "prettier"
   ],
   "extends": [
@@ -8,7 +8,7 @@
   ],
   "rules": {
     "no-console": [
-        false
+        0
     ],
     "@typescript-eslint/indent": "ingore",
     "prettier/prettier": "error"
