+HeaderBar -Header  ->replaced Header with HeaderBar *tsconfig  ->disable the check to any type *App *Body *Webpack.*  ->adjust to eslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "sourceMap": true,
     "outDir": "/www/app/lang/words/",
     "strict": true,
-    "noImplicitAny": true,
+//    "noImplicitAny": true,
     "esModuleInterop": true
   },
   "include": [
