--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@material-ui/core": "^4.1.3",
     "@types/jest": "^24.0.15",
     "@types/webpack-merge": "^4.1.5",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
@@ -43,6 +44,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "source-map-loader": "^0.2.4",
+    "styled-components": "^4.3.2",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.2",
