--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@material-ui/core": "^4.1.3",
+    "@material-ui/icons": "^4.2.1",
     "@types/jest": "^24.0.15",
     "@types/webpack-merge": "^4.1.5",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
