--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.0.0",
     "eslint": "^5.0.0",
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-prettier": "^3.1.0",
@@ -46,6 +47,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "styled-components": "^4.3.2",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
