--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/types": "^7.5.0",
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
+    "@types/babel__core": "^7.1.2",
     "@types/enzyme": "^3.10.1",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.15",
+    "@types/jest-diff": "^20.0.1",
     "@types/webpack-merge": "^4.1.5",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
@@ -48,7 +51,9 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^1.6.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
+    "jest-diff": "^24.8.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "source-map-loader": "^0.2.4",
