--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/babel__core": "^7.1.2",
     "@types/enzyme": "^3.10.1",
     "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/es6-promise": "^3.3.0",
+    "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^24.0.15",
     "@types/jest-diff": "^20.0.1",
     "@types/webpack-merge": "^4.1.5",
@@ -46,12 +48,14 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
+    "es6-promise": "^4.2.8",
     "eslint": "^5.0.0",
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^1.6.1",
     "identity-obj-proxy": "^3.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "jest": "^24.8.0",
     "jest-diff": "^24.8.0",
     "npm-run-all": "^4.1.5",
