--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
-    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/types": "^7.5.0",
@@ -38,7 +37,6 @@
     "@types/enzyme": "^3.10.1",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/enzyme-to-json": "^1.5.3",
-    "@types/es6-promise": "^3.3.0",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^24.0.15",
     "@types/jest-diff": "^20.0.1",
@@ -47,6 +45,8 @@
     "@typescript-eslint/parser": "^1.11.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
