--- a/package.json
+++ b/package.json
@@ -40,13 +40,12 @@
     "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^24.0.15",
     "@types/jest-diff": "^20.0.1",
+    "@types/react-router-dom": "^4.3.4",
     "@types/webpack-merge": "^4.1.5",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
@@ -56,12 +55,15 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^1.6.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^24.8.0",
     "jest-diff": "^24.8.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
+    "react-router-dom": "^5.0.1",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "styled-components": "^4.3.2",
