*App.spec -> add test Router existance check *Main.spec -> change local api server url *App.tsx -> add id to test *Main.tsx -> change import way of backendUrl to test local env *package.json -> change npm run script according to change of backendUrl *webpack -> remove alias setting +webpack.stg -> add webpack setting in staging env

--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jest",
+    "test": "NODE_ENV=test jest",
     "lint": "eslint .",
     "fix": "eslint --fix .",
-    "dev": "NODE_ENV=dev webpack-dev-server --config webpack.dev.js",
-    "stg": "NODE_ENV=stg webpack --config webpack.prod.js",
-    "prd": "NODE_ENV=prd webpack --config webpack.prod.js"
+    "dev": "webpack-dev-server --config webpack.dev.js",
+    "stg": "webpack --config webpack.stg.js",
+    "prd": "webpack --config webpack.prd.js"
   },
   "repository": {
     "type": "git",
