--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "fix": "eslint --fix .",
     "dev": "webpack-dev-server --config webpack.dev.js",
     "stg": "webpack --config webpack.stg.js",
-    "prd": "webpack --config webpack.prd.js"
+    "prd": "webpack --config webpack.prd.js",
+    "postinstall": "typesync"
   },
   "repository": {
     "type": "git",
@@ -37,10 +38,17 @@
     "@types/enzyme": "^3.10.1",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/enzyme-to-json": "^1.5.3",
+    "@types/eslint": "^4.16.6",
+    "@types/eslint-plugin-prettier": "^2.2.0",
+    "@types/html-webpack-plugin": "^3.2.1",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^24.0.15",
     "@types/jest-diff": "^20.0.1",
+    "@types/prettier": "^1.18.0",
     "@types/react-router-dom": "^4.3.4",
+    "@types/styled-components": "^4.1.18",
+    "@types/webpack": "^4.32.1",
+    "@types/webpack-dev-server": "^3.1.7",
     "@types/webpack-merge": "^4.1.5",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
@@ -70,6 +78,7 @@
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.2",
+    "typesync": "^0.5.1",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2",
